--- a/style.css
+++ b/style.css
@@ -1,9 +1,20 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
-.first img{width: 100%;
-    position: relative;
-}
+.first h1{font-size: 70px;
+        text-align: center;
+        padding-top: 600px;
+    color: rgb(197, 195, 195);}
+.first{background-image: url(images/donation20.png);
+width: 100%; height: 1000px;
+background-repeat: no-repeat;}
+.first h3{
+    text-align: center;
+    color: rgb(197, 195, 195);}
+    .first a{
+        margin-left: 700px;
+    }
 .second{
     text-align: center;
     position: absolute;
@@ -20,6 +31,7 @@ a{
 .donation{
     font-size: 35px;
     text-align: center;
+    margin-top: 100px;
 }
 .donation h6{
     font: 10;
@@ -54,3 +66,102 @@ a{
     font-weight: bolder;
     padding: 5px 10px;
 }
+.donation-1{
+    text-align: center;
+    font-size: 35px;
+    margin-top: 100px;
+}
+.donation-1 h5{font-size: 20px;}
+.donation-1 p{
+    font-size: 20px;
+}
+.family{
+    display: flex;
+    margin-top: 200px;
+}
+.family-1{
+width: 450px;
+height: 300px;
+margin-left: 100px;
+background: aqua;
+padding-top: 100px;
+padding-left: 50px;
+border-radius: 10px;
+}
+.family-2{
+    width: 450px;
+    height: 300px;
+    margin-left: 100px;
+    background-color: rgb(238, 139, 10);
+    padding-top: 100px;
+    padding-left: 50px;
+    border-radius: 10px;
+}
+.family-3{
+    width: 450px;
+    height: 300px;
+    margin-left: 100px;
+    padding-top: 100px;
+    padding-left: 50px;
+    background-color: rgb(233, 241, 239);
+    border-radius: 10px;
+    margin-right: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+.dependency img{width: 90%;
+                  height: 500px;
+}
+.dependency h1{
+    text-align: left;
+    font-size: 45px;
+    padding-left: 90px;
+    padding-right: 30px;
+}
+.dependency p{padding-left: 90px;
+}
+.dependency{
+    display: flex;
+    margin-top: 200px;
+}
+.get-update{
+    text-align: center;
+    font-size: 35px;
+    margin-top: 250px;
+}
+.get-update h5{font-size: 20px;}
+.update{
+    text-align: center;
+    color: gray;
+    font: 100;
+    font-size: 20px;
+    margin-top: 100px;
+    background-color: gainsboro;
+    border: 10px salmon;
+    padding-top: 20px;
+    width: 300px;
+    height: 50px;
+    margin-left: 600px;
+}
+.last-update{
+    text-align: center;
+    font-size: 20px;
+    margin-left: 40px;
+    margin-top: 120px;}
+    .final{
+        display: flex;
+    }
+    .foot{
+        color: aliceblue;
+        text-align: center;
+        font-size: 30px;
+        margin-top: 150px;
+        background-color: black;
+        height: 250px;
+        padding-top: 5px;
+    }
+    .foot h6{
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-style: italic;
+        font-size: 30px;
+    }
